Backend ComunityTech - primera versión

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,40 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# === DEPENDENCIAS ===
+node_modules/
+dist/
+build/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# === ARCHIVOS DE CONFIGURACIÓN LOCAL ===
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# === LOGS ===
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# === SISTEMAS OPERATIVOS ===
+.DS_Store
+Thumbs.db
+
+# === EDITORES ===
+.vscode/
+.idea/
+
+# === TEMPORALES ===
+*.tmp
+*.temp
+
+# === ARCHIVOS DE COMPILACIÓN DE TYPESCRIPT (si usás TS) ===
+*.tsbuildinfo
+
+# === BUILD Y CACHE DE REACT ===
+.cache/
+coverage/
+
+# === OTRAS CARPETAS DE SALIDA ===
+out/
